beautyfied cap1, cap2 e cap3. TODO beautify cap4

--- a/Bibliografia.tex
+++ b/Bibliografia.tex
@@ -228,4 +228,25 @@ In: Proceedings of the second ACM conference on Data and Application Security an
 
 \bibitem{sentiment140}
 https://www.kaggle.com/kazanova/sentiment140
+
+\bibitem{studyFb}
+Wang, Yang and Norcie, Gregory and Komanduri, Saranga and Acquisti, Alessandro and Leon, Pedro Giovanni and Cranor, Lorrie Faith\newline
+\textit{"I regretted the minute I pressed share" a qualitative study of regrets on Facebook}\newline
+Proceedings of the seventh symposium on usable privacy and security, pages 1--16, 2011 
+
+\bibitem{readMyTwitter}
+Sleeper, Manya and Cranshaw, Justin and Kelley, Patrick Gage and Ur, Blase and Acquisti, Alessandro and Cranor, Lorrie Faith and Sadeh, Norman\newline
+\textit{" I read my Twitter the next morning and was astonished" a conversational perspective on Twitter regrets}\newline
+Proceedings of the SIGCHI conference on human factors in computing systems, pages 3277--3286, 2013
+
+\bibitem{hybrid}
+Cozza, Federico and Guarino, Alfonso and Isernia, Francesco and Malandrino, Delfina and Rapuano, Antonio and Schiavone, Raffaele and Zaccagnino, Rocco\newline
+\textit{Hybrid and lightweight detection of third party tracking: Design, implementation, and evaluation}\newline
+Computer Networks, 106993, 2020
+
+\bibitem{Koehn07}
+Koehn, Philipp and Schroeder, Josh\newline
+\textit{Experiments in domain adaptation for statistical machine translation}\newline
+Proceedings of the second workshop on statistical machine translation, pages 224--227, 2007
+
 \end{thebibliography}
