--- a/Capitolo1.tex
+++ b/Capitolo1.tex
@@ -1,12 +1,17 @@
 \section{Contesto}
-Da una decina d'anni a questa parte gli OSN sono sempre più presenti nella vita di milioni di persone, siamo arrivati al punto che una singola persona possiede anche più tipi di social network e su ognuno di questi pubblica contenuti diversi. Questo fa si che su queste piattaforme viaggi una enorme mole di informazioni. A tal proposito è stato dimostrato, che su una sessione di navigazione che comprendeva
-un insieme di azioni tipiche di un utente (accesso a social network, ricerche,
-posting di commenti, ecc), Google Analytics raccoglieva circa l’87\% dei dati
-personali e sensibili disponibili\cite{MalandrinoScarano}
+Da una decina d'anni a questa parte gli OSN sono sempre più presenti nella vita di milioni di persone; siamo arrivati al punto che una singola persona possiede anche più tipi di social network (o addirittura account multipli) e su ognuno di questi, spesso sulla base del tipo di comunicazione che permette, pubblica contenuti diversi. I social network incoraggiano sostanzialmente gli utenti a condividere più o meno la loro privacy per migliorare la loro presenza nel mondo virtuale. Questo fa si che su queste piattaforme viaggi una enorme mole di informazioni.
 
+In particolare, alcuni studi dimostrano che gli utenti a volte rivelano troppe informazioni o divulgano involontariamente messaggi che minano la loro privacy, specialmente quando sono negligenti, emotivi o inconsapevoli dei rischi~\cite{looseTweets, studyFb, readMyTwitter}.
+Per la maggior parte degli utenti, i loro post sono pensati solo per essere condivisi con amici / follower, ma il pubblico degli OSN è significativamente più grande delle aspettative degli utenti, tra cui inserzionisti, recruiter, robot dei motori di ricerca, ecc.
 Spesso queste informazioni pubblicate sugli OSN possono contenere informazioni sensibili e/o personali proprie o di terzi. 
 
-Quando gli utenti di un OSN si registrano ad esso questi stanno affidando alla piattaforma alla quale si iscrivono la loro anagrafica e molte altre informazioni che possono contribuire alla identificazione univoca dell'individuo. A gestori degli OSN viene affidato il compito di manutenere e di tenere al sicuro i dati che l'utente gli affida. Purtroppo sono stati riportati dei casi in cui delle falle di sicurezza presenti in alcuni OSN abbiano portato al furto di molti account(e ai dati ad esso connessi).
+Quando gli utenti di un OSN si registrano ad esso questi stanno affidando alla piattaforma alla quale si iscrivono la loro anagrafica e molte altre informazioni che possono contribuire alla identificazione univoca di se stessi. A gestori degli OSN viene affidato il compito di manutenere e di tenere al sicuro i dati che l'utente gli affida. Purtroppo sono stati riportati dei casi in cui delle falle di sicurezza presenti in alcuni OSN abbiano portato al furto di molti account (e ai dati ad esso connessi).
+
+Pertanto, c'è la necessità di poter identificare contenuti online potenzialmente sensibili, in modo che gli utenti possano essere avvisati di tali minacce ed agire di conseguenza prima che il contenuto venga pubblicato in rete.
+
+%A tal proposito è stato dimostrato, che su una sessione di navigazione che comprendeva un insieme di azioni tipiche di un utente (accesso a social network, ricerche, posting di commenti, ecc), Google Analytics raccoglieva circa l’87\% dei dati personali e sensibili disponibili~\cite{MalandrinoScarano}.
+
+
 
 \subsection{Alcuni casi di furto di informazioni}
 \label{ssec:exampleLeak}
@@ -62,16 +67,17 @@ Spesso gli utenti degli OSN divulgano anche senza la piena consapevolezza dati s
 
 A differenza dei convenzionali meccanismi di protezione della privacy sui dati o sui OSN, che si focalizzano principalmente sulla protezione dell’identità o di attributi privati \cite{collective-data, diff-privacy, urwho, inferr-privacy, protection-private, stalking}, Knoxly si muove verso l’idea di \quotes{\textit{privacy as having the ability to control the dissemination of sensitive information}}.
 
-Attualmente i limiti di Knoxly sono quelli intrinsechi ad una analisi lessicale. Per questa ragione, in questo lavoro verrà aggiunto un modulo semantico in grado di capire se un testo scritto da un utente contenga o meno dati sensibili e/o personali.
+Attualmente i limiti di Knoxly sono quelli intrinsechi ad una analisi lessicale. Per questa ragione, in questo lavoro ci si vuole muovere verso metodi intelligenti che oltrepassino i metodi keyword-based, aggiungendo un "modulo semantico" in grado di capire se un testo scritto da un utente contenga o meno dati sensibili e/o personali.
 
 \section{Il modello di minaccia}
 Knoxly mira a proteggere gli utenti del Web dalla diffusione accidentale di qualsiasi contenuto inappropriato, in particolare le informazioni private o sensibili su se stessi. Si considera principalmente il rischio di una diffusione inappropriata a due tipo di pubblico: (1) follower o amici, che ricevono aggiornamenti dei post dell'utente; (2) staker esterni, che sbirciano nei post dei social network di un utente target. È probabile che entrambi conoscano l'identità offline dell'utente. Knoxly non impedisce all'utente di pubblicare i contenuti(sensibili) nè impedisce al destinatario di visualizzare i contenuti, fornendo privacy awareness. L'idea di Knoxly parte dal presupposto che dei tracciatori possono esplorare l'OSN attraverso l'interfaccia utente o raccogliere dati utilizzando un crawler automatizzato tramite l'API dell'OSN di riferimento. Infine, non considera la retrazione/cancellazione dei post precedenti, nè li analizza.
 
 \section{Obiettivi del lavoro}
-Questo lavoro si prefigge l'obiettivo di aggiungere a Knoxly una intelligenza artificiale(IA) in grado di poter riconoscere un dato sensibile, di segnalare all'utente la presenza di questo dato e di dare la possibilità all'utente di inviare un feedback all'IA in modo tale che essa possa imparare a riconoscere quali sono i dati sensibili secondo l'utente che sta utilizzando il plugin.
+Questo lavoro si prefigge l'obiettivo di aggiungere a Knoxly un modulo intelligente in grado di poter riconoscere un dato sensibile in un testo scritto in linguaggio naturale senza affidarsi a meccanismi keyword-based, di segnalare all'utente la presenza di questo dato e di dare la possibilità all'utente di personalizzare il livello delle segnalazioni in modo tale che esso possa "imparare" a riconoscere quali sono i dati sensibili secondo lo specifico l'utente che sta utilizzando il plugin.
+
 \subsection{I dati sensibili}
 \label{ssec:sensitive_data}
-Secondo la normativa GDPR attualmente in vigore per dati sensibili si intendono i dati che rivelino:
+Nelle precedenti sezioni si è molto discusso di dati sensibili, ma cosa sono esattamente? Secondo la normativa GDPR attualmente in vigore per dati sensibili si intendono i dati che rivelino:
 \begin{itemize}
     \item l'etnia, pensiero politico, religioso o filosofico
     \item se si è membri di un sindacato
@@ -86,4 +92,4 @@ Abbiamo scelto di utilizzare un sottoinsieme di temi di partenza per dare una co
     \item lavoro
     \item viaggi
 \end{enumerate}
-Questi temi sono stati scelti per due motivi, il primo è che molti di questi temi fanno parte della normativa GDPR quindi è una legge a dirci che i dati appartenenti a quelle categorie sono sensibili e il secondo è che molti dei temi che verranno trattati sono già stati utilizzati negli studi sopracitati ma anche in altri studi riguardanti la privacy detection e il privacy leakage.
+Questi temi sono stati scelti per due motivi: (a) molti di questi temi fanno parte della normativa GDPR quindi è una legge a dirci che i dati appartenenti a quelle categorie sono sensibili e (b) molti dei temi che verranno trattati sono già stati utilizzati in vari riguardanti la privacy detection e il privacy leakage~\cite{looseTweets, MalandrinoScarano, dontTweetThis}.
