--- a/indice.tex
+++ b/indice.tex
@@ -5,10 +5,12 @@
 \usepackage{graphicx}
 \usepackage{cite}
 \usepackage{amsmath}
+\usepackage{amsfonts}
 \usepackage[table,xcdraw]{xcolor}
 \usepackage{verbatim}
 \usepackage{url}
 \usepackage{listings}
+\usepackage{xcolor}
 \usepackage{comment}
 \usepackage{hyperref}
 \usepackage{multirow}
@@ -36,12 +38,31 @@
 \fancyhead[L]{\rightmark}
 \cfoot{\thepage}
 
-\lstset{frame=tb,
-	language=Java,
-	numbers=left,
-	keywordstyle=\color{blue},
-	alsoletter={.}
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{mystyle}{
+    backgroundcolor=\color{backcolour},   
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{magenta},
+    numberstyle=\tiny\color{codegray},
+    stringstyle=\color{codepurple},
+    basicstyle=\ttfamily\footnotesize,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=true,                 
+    numbers=left,                    
+    numbersep=5pt,                  
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=2
 }
+
+\lstset{style=mystyle}
 \graphicspath{ {./Figure/} }
 
 \usepackage{titlesec}
